# UnType

./: .gitignore  LICENSE  README.md  README_EN.md  build.py  pyproject.toml  untype-online.spec
locales/: en.json  zh.json
personas/: 00_default.json  01_boss.json  02_colleague.json  03_bullets.json  04_english_translator.json  05_simplify.json  06_decline.json  07_poetic.json
src/untype/: __init__.py  _platform_darwin.py  _platform_win32.py  audio.py  build_info.py  clipboard.py  config.py  hotkey.py  llm.py  main.py  overlay.py  persona_dialog.py  platform.py  stt.py  tooltip.py  tray.py  wizard.py
