[project]
name = "untype"
version = "0.2.1"
description = "AI-powered voice input for Windows — STT + LLM, from speech to polished text"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "jlmaoju" },
]
keywords = ["voice-input", "speech-to-text", "voice-typing", "push-to-talk", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pynput>=1.7.6",
    "pyperclip>=1.9.0",
    "httpx>=0.27.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "dashscope>=1.25.12",
]

[project.scripts]
untype = "untype.main:main"

[project.optional-dependencies]
realtime = [
    "dashscope>=1.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
Homepage = "https://github.com/jlmaoju/untype"
Repository = "https://github.com/jlmaoju/untype"
Issues = "https://github.com/jlmaoju/untype/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/untype"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
